🗞️✏️ Updated with Glitch

--- a/package.json
+++ b/package.json
@@ -1,36 +1,23 @@
 {
-	"name": "RREComms",
-	"version": "0.4.0",
-	"description": "A private encrypted chat app with login.",
-	"main": "server.js",
-	"scripts": {
-		"start": "node server.js"
-	},
-	"dependencies": {
-		"express": "^4.19.2",
-		"express-handlebars": "^8.0.1",
-		"fs": "^0.0.1-security",
-		"hbs": "^4.2.0",
-		"http": "^0.0.1-security",
-		"join": "^3.0.0",
-		"os": "^0.1.2",
-		"socket.io": "^4.7.5",
-		"sqlite": "^5.1.1",
-		"sqlite3": "^5.1.7",
-		"sqlstring": "^2.3.3"
-	},
-	"engines": {
-		"node": "14.x"
-	},
-	"repository": {
-		"url": "https://github.com/IWLTechnology/RREComms"
-	},
-	"license": "MIT",
-	"keywords": [
-		"node",
-		"socket",
-		"sqlite",
-		"web",
-		"rsa"
-	]
+  "name": "RREComms",
+  "version": "1.0.0",
+  "description": "",
+  "main": "server.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "dependencies": {
+    "express": "^4.19.2",
+    "express-handlebars": "^7.1.2",
+    "hbs": "^4.2.0",
+    "join": "^3.0.0",
+    "socket.io": "^4.7.5",
+    "sqlite": "^5.1.1",
+    "sqlite3": "^5.1.7",
+    "sqlstring": "^2.3.3"
+  }
 }
