--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "browserify": "^17.0.1",
     "express": "^4.21.0",
     "express-handlebars": "^8.0.1",
     "hbs": "^4.2.0",
