--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "browserify": "^17.0.1",
+    "crypto": "^1.0.1",
     "express": "^4.21.0",
     "express-handlebars": "^8.0.1",
     "hbs": "^4.2.0",
